# ncdc-chatbot-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: config.py  database.py  deps.py  main.py  models.py  schemas.py  security.py
app/graph/: __init__.py  pipeline.py  state.py
app/routers/: analytics.py  auth.py  chat.py  documents.py
app/services/: cache.py  chunking.py  conversation.py  embeddings.py  error_log.py  ingestion.py  llm.py  ocr.py  pdf_processor.py  qdrant_service.py  reranker.py  retrieval.py
docs/: CONTEXT_AWARE_RAG.md
